crates/tests/fixtures/compile_errors/call_create2_with_wrong_type.fe
contract Bar:
    pass

contract Foo:

    pub def foo():
        Bar.create2(true, 1)
